--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 TODO
 ----
 
-FINISH the obfuscate_email function
-
 generate a resume in HTML format (single file, downloadable)
 
 page with form/button where the visitor can request contact information
@@ -19,7 +17,7 @@ generated resume files should cite URL of online CV (created by GenCV), if known
 
 distinction between photos of you, vs. photos you've made (not of you) vs. images you've drawn/generated (programmaticlly or art-by-hand, painted, etc.)
 
-source code gallery
+in generated website, color syntax highlighting for code samples shown as HTML
 
 links to online video
 
@@ -27,15 +25,24 @@ audio downloads
 
 references
 
-data model file includes data on past employment, and projects performed, timeline, like in a resume
+LOC counts for each website created, software created, and maybe per job
+
+per job: projects performed, timeline?
 
 education, degrees, awards, certificates
 
 tutorials written
+
 books written
+
+books editted
+
 magazine articles written
+
 academic papers written
+
 artwork created/drawn
+
 diagrams created
 
 links to sites where you have an online presence (forums, clubs), including a link directly to your profile page on that site, as well as links to things you've posted or submitted to that site (comments, posts, reviews, blog comments, etc.)
@@ -49,10 +56,13 @@ friends: names, links to their sites/profiles
 create enduser documentation
 
 books read
+
 patents held, issued, assigned, co-granted, whatever
-academic papers published
-books editted
+
 civic awards
-clubs belonged to
+
+club memberships
+
 non-profit organization membership or offices held
+
 records held (as in Guiness book of world records...ok, this may be pushing it)
